--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -6,6 +6,48 @@
 }
 
 .input-container{
-  max-width: 60rem;
+  max-width: 70rem;
   margin: 0 auto;
+}
+
+.action-wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+table{
+  width: 100%;
+  border-collapse: collapse;
+  thead>tr>th{
+    text-align: left;
+    padding: 1rem;
+    font-size: 1.3rem;
+  }
+  tbody>tr>td{
+    padding: 1rem 1rem 2rem 1rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
+}
+table, th, td{
+  border: 1px solid #ccc;
+}
+
+.schema-title{
+  background-color: #F5F5F5;
+  border: 1px solid #DDDDDD;
+  border-radius: 4px 4px 0 0;
+  border-bottom: none ;
+  padding: 1rem;
+  font-weight: 500;
+}
+
+.table-schema{
+  tbody>tr>td{
+    padding: 0.3rem 0 0.3rem 1rem;
+    font-size: 1.3rem;
+    font-weight: 500;
+  }
 }
