--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 @import './sass/variables';
 @import './sass/utilities';
 @import './sass/typography';
+@import './sass/table';
 
 html{
     font-size: 62.5%;
@@ -66,6 +67,45 @@ body{
   transition: all .2s ease-out;
   cursor: pointer;
   position: relative;
+  &--danger{
+    background-color: #f56c6c;
+    color: #fff;
+  }
+  &--primary{
+    background-color: $color-primary;
+    color: #fff;
+  }
+  &-round{
+    height: 3.2rem;
+    width: 3.2rem;
+    border-radius: 50%;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    cursor: pointer;
+    &::after{
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background-color: inherit;
+      z-index: -1;
+      transition: all .2s ease-out;
+    }
+    &:hover::after{
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
+    &>*{
+      position: relative;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
   &-primary{
     background-color: $color-primary;
     color: #fff;
